resources/css/styles.css
:root {
  --h1-clamp: clamp(2.66rem, 5vw, 3rem);
  --h2-clamp: clamp(2.44rem, 5vw, 2.75rem);
  --h3-clamp: clamp(2.22rem, 5vw, 2.50rem);
  --h4-clamp: clamp(2rem, 5vw, 2.25rem);
  --h5-clamp: clamp(1.77rem, 5vw, 2rem);
  --h6-clamp: clamp(1.55rem, 5vw, 1.75rem);
  --p-clamp: clamp(16px, 1vw, 1rem)
}

body {
  font-family: ralewaymedium, sans-serif;
  display: grid;
  grid-template-areas:
    "header"
    "nav"
    "main"
    "footer"
}

h1 {
  font-size: var(--h1-clamp);
}

h2 .bold {
  font-weight: bold;
}

header {
  height: 22rem;
  position: relative;
  display: flex;
  align-items: center;
  background-image: url("../../resources/images/sword.jpg");
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  background-color: #020018;
}

.header-content {
  display: flex;
  flex-direction: column;
  position: relative;
  align-items: center;
  text-align: center;
  margin: auto;
}

header h1,
header p {
  background-color: rgb(24 0 0 / 55%);
  border-radius: 1px;
  border: white solid .10rem;
  color: white;
  padding: .25rem 1rem;
}

header p {
  margin-top: 6rem;
  z-index: 2;
}

.fire {
  width: 11rem;
  top: 8.5rem;
  z-index: 1;
}

.fire1 {
  position: absolute;
  left: 5.625rem;
}

.fire2 {
  transform: scaleX(-1);
  position: absolute;
  right: 5.625rem;
}

.author {
  position: absolute;
  top: 20rem;
  left: 1rem;
  color: rgb(255, 253, 253);
}

nav {
  text-align: center;
  text-transform: lowercase;
  margin: 5rem 0;
}

nav span {
  margin: 0 .5rem;
  font-size: var(--p-clamp);
}

a:link {
  color: rgb(32, 29, 249);
  text-decoration: none;
}

a:visited {
  color: rgb(102, 100, 254);
}

a:hover {
  color: rgb(155, 154, 255);
}

main {
  width: 84%;
  margin: auto;
}

section {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  margin-top: 2rem;
}

section div {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 1rem;
}

section .meaning {
  text-align: justify;
}

.example {
  overflow: hidden;
}

.back-to-top-link {
  max-width: fit-content;
  font-size: var(--p-clamp);
  position: relative;
  left: 1rem;
  font-size: 1.25rem;
  margin: 2rem 0;
  font-size: 1rem;

}

.asterisk {
  font-size: 2rem;
  color: red;
}

.shade {
  background-color: rgb(219, 219, 219);
}

.mono {
  font-family: monospace, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.box-model-second-position {
  display: none;
}

footer {
  padding: 2.5rem;
}

footer p {
  margin-bottom: 1rem;
}

